--- a/weather/templates/weather/forecast.html
+++ b/weather/templates/weather/forecast.html
@@ -2,19 +2,287 @@
 
 <!DOCTYPE html>
 <html>
+
 <head>
-	<title>Forecast</title>
-	
-	<link rel="stylesheet" type="text/css" href="{% static 'weather/vendors/bootstrap/css/bootstrap.css' %}" />
-	<link rel="stylesheet" type="text/css" href="{% static 'weather/css/style.css' %}" />
+  <title>Forecast</title>
+
+  <link rel="stylesheet" type="text/css" href="{% static 'weather/vendors/bootstrap/css/bootstrap.css' %}" />
+  <link rel="stylesheet" type="text/css" href="{% static 'weather/css/style.css' %}" />
+  <link href="https://fonts.googleapis.com/css?family=Arima+Madurai:700|Open+Sans:400,400i,700&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
-	<!-- your single-location forecast interface here -->
+  <!-- your single-location forecast interface here -->
+
+  <a href="#">
+    <div class="options"></div>
+  </a>
+  <br><br>
+  <div class="calendar">
+    <div>
+      <h4 id="menu-month">JUNE</h4>
+      <h3 id="menu-date">25</h3>
+    </div>
+  </div>
+  <a href="/weather/comparison/">
+    <div class="menu-city">
+      <h3>Berkeley</h3>
+    </div>
+  </a>
+  <br>
+
+  <div class="temp">
+    <h1 id="menu-temperature">56</h1>
+    <h2 id="menu-units">&deg;F</h2>
+  </div>
+  <h2 id="menu-description">Sunny</h2>
+  <br>
+
+  <input type="range" min="700" max="2300" step="100" value="700">
+  <div class="timings">
+    <span>Now</span>
+    <span>11am</span>
+    <span>3pm</span>
+    <span>7pm</span>
+    <span>11pm</span>
+  </div>
+
+  <!--Carousel Wrapper-->
+  <!--     <div id="carousel-thumb" class="carousel slide carousel-fade" data-ride="carousel">
+      <!--Slides-->
+  <!--       <div class="carousel-inner" role="listbox">
+<!--    <div class="carousel-item active">
+          <div class="view">
+            <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+            
+            <div class="mask rgba-black-light"></div>
+          </div>
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">56</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="view">
+            <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+            <div class="temp">
+              <h1 id="menu-temperature">57</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <div class="mask rgba-black-light"></div>
+          </div>
+          <div class="carousel-caption">
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="view">
+            <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+            <div class="temp">
+              <h1 id="menu-temperature">59</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <div class="mask rgba-black-light"></div>
+          </div>
+          <div class="carousel-caption">
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="view">
+            <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+            <div class="temp">
+              <h1 id="menu-temperature">60</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <div class="mask rgba-black-light"></div>
+          </div>
+          <div class="carousel-caption">
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="view">
+            <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+            <div class="temp">
+              <h1 id="menu-temperature">62</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <div class="mask rgba-black-light"></div>
+          </div>
+          <div class="carousel-caption">
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+         <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">65</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">67</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">69</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">70</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-sunny.png" alt="sunny">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">70</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Sunny</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-partlyCloudy.png" alt="partlyCloudy">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">70</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Partly Cloudy</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-partlyCloudy.png" alt="partlyCloudy">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">69</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Partly Cloudy</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-partlyCloudy.png" alt="parlyCloudy">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">69</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Partly Cloudy</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-partlyCloudy.png" alt="partlyCloudy">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">67</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Partly Cloudy</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/s-partlyCloudy.png" alt="partlyCloudy">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">65</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Partly Cloudy</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/m-mostlyClear.png" alt="mostlyClear">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">62</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Mostly Clear</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/m-clear.png" alt="clear">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">61</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Clear</h2>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" src="../../static/weather/assets/m-clear.png" alt="clear">
+          <div class="carousel-caption">
+            <div class="temp">
+              <h1 id="menu-temperature">60</h1>
+              <h2 id="menu-units">&deg;F</h2>
+            </div>
+            <h2 id="menu-description">Clear</h2>
+          </div>
+        </div>
+      </div> -->
+  <!--/.Slides-->
+  <!--Controls-->
+  <!--       <a class="carousel-control-prev" href="#carousel-thumb" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="carousel-control-next" href="#carousel-thumb" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a> -->
+  <!--/.Controls-->
+  <!--       <ol class="carousel-indicators">
+        <li data-target="#carousel-thumb" data-slide-to="0" class="active">Now</li>
+        <li data-target="#carousel-thumb" data-slide-to="1">7am</li>
+        <li data-target="#carousel-thumb" data-slide-to="2">8am</li>
+        <li data-target="#carousel-thumb" data-slide-to="3">9am</li>
+        <li data-target="#carousel-thumb" data-slide-to="4">10am</li>
+        <li data-target="#carousel-thumb" data-slide-to="5">11am</li>
+        <li data-target="#carousel-thumb" data-slide-to="6">12pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="7">1pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="8">2pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="9">3pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="10">4pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="11">5pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="12">6pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="13">7pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="14">8pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="15">9pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="16">10pm</li>
+        <li data-target="#carousel-thumb" data-slide-to="17">11pm</li>
+      </ol> -->
+  </div>
+  <!--/.Carousel Wrapper-->
+
 </body>
+
 </html>
-
-
-
-
-
